CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Start defining the project
PROJECT (MOVE_SERVER)

# Set version numbers
SET(MOVE_SERVER_MAJOR_VERSION 1)
SET(MOVE_SERVER_MINOR_VERSION 0)
SET(MOVE_SERVER_VERSION "${MOVE_SERVER_MAJOR_VERSION}.${MOVE_SERVER_MINOR_VERSION}")

# Set cmake module path
SET(CMAKE_MODULE_PATH "${MOVE_SERVER_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

IF(NOT CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE RelWithDebInfo)
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(OUTPUT_BINDIR ${PROJECT_BINARY_DIR}/bin)
MAKE_DIRECTORY(${OUTPUT_BINDIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_BINDIR})


SET(MOVE_SERVER_SRC
    move_udp_server.cpp
    udp_physical.cpp
    udp_recv.cpp
    udp_tracker.cpp
    )

ADD_EXECUTABLE(move_server ${MOVE_SERVER_SRC})

INSTALL(TARGETS move_server DESTINATION bin)
